changing on folder structure

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Builder</title>
-    <link rel="stylesheet" href="public/style.css">
-
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h1>Resume Builder</h1>
 
+        <!-- Step 1: Personal Information -->
         <form id="resumeForm">
-            <!-- Step 1: Personal Information -->
             <div class="form-step active" id="step1">
                 <h2>Step 1: Personal Information</h2>
                 <input type="text" id="fullName" name="fullName" placeholder="Full Name" required>
@@ -58,6 +56,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
