changing on folder structure oe in code

--- a/public/index.html
+++ b/public/index.html
@@ -48,11 +48,11 @@
 
         <!-- Resume Preview -->
         <div id="resumePreview" style="display:none;">
-            <h2>Your Resume</h2>
+            <h2 id="resumeHeading">Your Resume</h2>
             <div id="resumeContent"></div>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- This will be replaced with script.ts in your final setup -->
 </body>
 </html>
