changing on folder structure

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Builder</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="container">
         <h1>Resume Builder</h1>
 
-        <!-- Step 1: Personal Information -->
         <form id="resumeForm">
+            <!-- Step 1: Personal Information -->
             <div class="form-step active" id="step1">
                 <h2>Step 1: Personal Information</h2>
                 <input type="text" id="fullName" name="fullName" placeholder="Full Name" required>
@@ -48,11 +48,11 @@
 
         <!-- Resume Preview -->
         <div id="resumePreview" style="display:none;">
-            <h2 id="resumeHeading">Your Resume</h2>
+            <h2 id="resumeHeading"></h2>
             <div id="resumeContent"></div>
         </div>
     </div>
 
-    <script src="script.js"></script> <!-- This will be replaced with script.ts in your final setup -->
+    <script src="/script.js"></script>
 </body>
 </html>
