changing on index.html or style.css

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Builder</title>
     <!-- Correct paths to the static files in the public folder -->
-    <link rel="stylesheet" href="/style.css"> <!-- Link to style.css -->
+    <link rel="stylesheet" href="style.css"> <!-- Link to style.css -->
 </head>
 <body>
     <div class="container">
@@ -38,6 +38,6 @@
     </div>
 
     <!-- Link to script.js file -->
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
