--- a/public/index.html
+++ b/public/index.html
@@ -4,40 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Builder</title>
-    <!-- Correct paths to the static files in the public folder -->
-    <link rel="stylesheet" href="style.css"> <!-- Link to style.css -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Resume Builder</h1>
+    <div class="app-container">
+        <div class="form-container">
+            <h1 class="title">Resume Builder</h1>
+            <form id="resumeForm">
+                <!-- Step 1: Personal Information -->
+                <div class="form-step active" id="step1">
+                    <h2>Step 1: Personal Information</h2>
+                    <input type="text" id="fullName" name="fullName" placeholder="Full Name" required>
+                    <input type="email" id="email" name="email" placeholder="Email" required>
+                    <input type="tel" id="phone" name="phone" placeholder="Phone Number" required>
+                    <button type="button" class="nextBtn" data-next="step2">Next</button>
+                </div>
 
-        <form id="resumeForm">
-            <!-- Step 1: Personal Information -->
-            <div class="form-step active" id="step1">
-                <h2>Step 1: Personal Information</h2>
-                <input type="text" id="fullName" name="fullName" placeholder="Full Name" required>
-                <input type="email" id="email" name="email" placeholder="Email" required>
-                <input type="tel" id="phone" name="phone" placeholder="Phone Number" required>
-                <button type="button" class="nextBtn" data-next="step2">Next</button>
-            </div>
+                <!-- Step 2: Education -->
+                <div class="form-step" id="step2">
+                    <h2>Step 2: Education</h2>
+                    <input type="text" id="degree" name="degree" placeholder="Degree" required>
+                    <input type="text" id="school" name="school" placeholder="School Name" required>
+                    <input type="text" id="gradYear" name="gradYear" placeholder="Graduation Year" required>
+                    <button type="button" class="nextBtn" data-next="step3">Next</button>
+                </div>
 
-            <!-- Other form steps... -->
+                <!-- Step 3: Work Experience -->
+                <div class="form-step" id="step3">
+                    <h2>Step 3: Work Experience</h2>
+                    <input type="text" id="jobTitle" name="jobTitle" placeholder="Job Title" required>
+                    <input type="text" id="company" name="company" placeholder="Company Name" required>
+                    <input type="text" id="workDates" name="workDates" placeholder="Work Dates" required>
+                    <button type="button" class="nextBtn" data-next="step4">Next</button>
+                </div>
 
-            <div class="form-step" id="step4">
-                <h2>Step 4: Skills</h2>
-                <textarea id="skills" name="skills" placeholder="Skills (e.g. JavaScript, HTML, CSS)" required></textarea>
-                <button type="button" id="submitForm">Generate Resume</button>
-            </div>
-        </form>
+                <!-- Step 4: Skills -->
+                <div class="form-step" id="step4">
+                    <h2>Step 4: Skills</h2>
+                    <textarea id="skills" name="skills" placeholder="Skills (e.g. JavaScript, HTML, CSS)" required></textarea>
+                    <button type="button" id="submitForm">Generate Resume</button>
+                </div>
+            </form>
+        </div>
 
         <!-- Resume Preview -->
-        <div id="resumePreview" style="display:none;">
-            <h2 id="resumeHeading"></h2>  <!-- Dynamic Heading for Resume -->
+        <div id="resumePreview" class="resume-preview">
+            <h2 id="resumeHeading"></h2>
             <div id="resumeContent"></div>
         </div>
     </div>
 
-    <!-- Link to script.js file -->
     <script src="script.js"></script>
 </body>
 </html>
+
