change the code

--- a/public/index.html
+++ b/public/index.html
@@ -7,49 +7,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="app-container">
-        <div class="form-container">
-            <h1 class="title">Resume Builder</h1>
-            <form id="resumeForm">
-                <!-- Step 1: Personal Information -->
-                <div class="form-step active" id="step1">
-                    <h2>Step 1: Personal Information</h2>
-                    <input type="text" id="fullName" name="fullName" placeholder="Full Name" required>
-                    <input type="email" id="email" name="email" placeholder="Email" required>
-                    <input type="tel" id="phone" name="phone" placeholder="Phone Number" required>
-                    <button type="button" class="nextBtn" data-next="step2">Next</button>
-                </div>
 
-                <!-- Step 2: Education -->
-                <div class="form-step" id="step2">
-                    <h2>Step 2: Education</h2>
-                    <input type="text" id="degree" name="degree" placeholder="Degree" required>
-                    <input type="text" id="school" name="school" placeholder="School Name" required>
-                    <input type="text" id="gradYear" name="gradYear" placeholder="Graduation Year" required>
-                    <button type="button" class="nextBtn" data-next="step3">Next</button>
-                </div>
+    <div class="container">
+        <h1 class="title">Resume Builder</h1>
+        
+        <!-- Form for input -->
+        <form id="resumeForm">
+            <!-- Step 1: Personal Information -->
+            <div class="form-step active" id="step1">
+                <h2>Personal Information</h2>
+                <input type="text" id="fullName" name="fullName" placeholder="Full Name" required>
+                <input type="email" id="email" name="email" placeholder="Email" required>
+                <input type="tel" id="phone" name="phone" placeholder="Phone Number" required>
+                <button type="button" class="nextBtn" data-next="step2">Next</button>
+            </div>
 
-                <!-- Step 3: Work Experience -->
-                <div class="form-step" id="step3">
-                    <h2>Step 3: Work Experience</h2>
-                    <input type="text" id="jobTitle" name="jobTitle" placeholder="Job Title" required>
-                    <input type="text" id="company" name="company" placeholder="Company Name" required>
-                    <input type="text" id="workDates" name="workDates" placeholder="Work Dates" required>
-                    <button type="button" class="nextBtn" data-next="step4">Next</button>
-                </div>
+            <!-- Step 2: Education -->
+            <div class="form-step" id="step2">
+                <h2>Education</h2>
+                <input type="text" id="degree" name="degree" placeholder="Degree" required>
+                <input type="text" id="school" name="school" placeholder="School Name" required>
+                <input type="text" id="gradYear" name="gradYear" placeholder="Graduation Year" required>
+                <button type="button" class="nextBtn" data-next="step3">Next</button>
+            </div>
 
-                <!-- Step 4: Skills -->
-                <div class="form-step" id="step4">
-                    <h2>Step 4: Skills</h2>
-                    <textarea id="skills" name="skills" placeholder="Skills (e.g. JavaScript, HTML, CSS)" required></textarea>
-                    <button type="button" id="submitForm">Generate Resume</button>
-                </div>
-            </form>
-        </div>
+            <!-- Step 3: Skills -->
+            <div class="form-step" id="step3">
+                <h2>Skills</h2>
+                <input type="text" id="skills" name="skills" placeholder="Skills (e.g. JavaScript, HTML, CSS)" required>
+                <button type="button" class="nextBtn" data-next="step4">Next</button>
+            </div>
 
-        <!-- Resume Preview -->
+            <!-- Step 4: Work Experience -->
+            <div class="form-step" id="step4">
+                <h2>Work Experience</h2>
+                <input type="text" id="jobTitle" name="jobTitle" placeholder="Job Title" required>
+                <input type="text" id="company" name="company" placeholder="Company Name" required>
+                <input type="text" id="workDates" name="workDates" placeholder="Work Dates (e.g., 2019 - 2022)" required>
+                <button type="button" id="generateResumeBtn">Generate Resume</button>
+            </div>
+        </form>
+
+        <!-- Resume Preview Section -->
         <div id="resumePreview" class="resume-preview">
-            <h2 id="resumeHeading"></h2>
+            <h2>Generated Resume</h2>
             <div id="resumeContent"></div>
         </div>
     </div>
@@ -57,4 +58,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+>
 
